add binary tree node

--- a/AlgorithmsTestProject/AlgorithmsTests.csproj
+++ b/AlgorithmsTestProject/AlgorithmsTests.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Algorithms\Algorithms.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Algorithms\" />
+  </ItemGroup>
+
 </Project>
