--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Algorithms\AVL Tree\" />
+    <Folder Include="Algorithms\Collection Concurrency\" />
+    <Folder Include="Algorithms\String Search\" />
+    <Folder Include="Algorithms\Set Collection\" />
+    <Folder Include="Algorithms\Sorting\" />
+    <Folder Include="Data Structures\Hash Tables\" />
+  </ItemGroup>
+
 </Project>
