--- a/Hackerrank/Hackerrank.csproj
+++ b/Hackerrank/Hackerrank.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.TeamFoundationServer.Client" Version="15.131.1" />
+  </ItemGroup>
+
 </Project>
