--- a/Hackerrank/Hackerrank.csproj
+++ b/Hackerrank/Hackerrank.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Algorithms\Algorithms.csproj" />
+  </ItemGroup>
+
 </Project>
