--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Algorithms\LeetCode\**" />
+    <EmbeddedResource Remove="Algorithms\LeetCode\**" />
+    <None Remove="Algorithms\LeetCode\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Algorithms\LeetCode-Medium\" />
     <Folder Include="Algorithms\PrincetonPartII\CH2\" />
   </ItemGroup>
 
