next permutation problem

--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Algorithms\LeetCode-Review-LongTerm\" />
     <Folder Include="Algorithms\PrincetonPartII\CH2\" />
   </ItemGroup>
 
