edit algo problems

--- a/Algorithms/Algorithms.csproj
+++ b/Algorithms/Algorithms.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <Folder Include="Algorithms\LeetCode-Review-LongTerm\" />
+    <Folder Include="Algorithms\Top100MS\" />
     <Folder Include="Algorithms\PrincetonPartII\CH2\" />
   </ItemGroup>
 
